# fastapi-mongodb

./: .dockerignore  .env.template  CHANGELOG.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json  pytest.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: linter.yaml  pyright.yaml  pytest.yaml  ruff.yaml
app/: main.py
app/core/: config.py  jwt.py  logger.py  security.py
app/database/: init-db.js  mongodb.py
app/middlewares/: logging.py
app/repositories/: user.py
app/routers/: __init__.py  auth.py  me.py  user.py
app/schemas/: user.py
app/services/: auth.py  user.py
docker/fastapi/: Dockerfile
tests/: conftest.py  test_auth.py  test_me.py
