[project]
name = "fastapi-mongodb"
version = "0.1.0"
description = "FastAPI template with MongoDB."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [{ name = "Carlos Andreo", email = "c.andreolopez@gmail.com" }]

[dependency-groups]
prod = [
  "fastapi[standard]==0.124.0",
  "motor==3.7.1",
  "pwdlib[argon2]==0.3.0",
  "pydantic-settings==2.12.0",
  "pyjwt==2.10.1",
]
lint = [
  "ruff==0.14.8",
]
type = [
  "pyright==1.1.407",
]
test = [
  "faker==38.2.0",
  "httpx==0.28.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
]
dev = [
  {include-group = "type"},
  {include-group = "test"}
]

[tool.uv]
default-groups = ["prod"]
